<resources>
    <string name="app_name">HealthBuddy</string>
    <string name="trademark">&#8482;</string>
    <string name="forum">Forum</string>
    <string name="nutrition">Nutrition</string>
    <string name="exercise">Exercise</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="community">Community</string>
    <string name="text_land_1">HealthBuddy, Your Personal Health Companion!\n\nAn app designed especially to empower you to take control of your health and well-being.</string>
    <string name="text_land_2">We offers a comprehensive food diary and nutritional information, helping you make healthier food choices and achieve your dietary objectives!</string>
    <string name="text_land_3">Access a range of guided meditations, stress-relief exercises, and wellness articles to improve your mental well-being and promote a balanced lifestyle!</string>
    <string name="text_land_4">Connect with like-minded individuals in the HealthBuddy community, sharing experiences, tips, and encouragement on your health journey!</string>
    <string name="next">Next</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="disclaimer">By tapping Continue with Google, you agree to HealthBuddy’s Terms and Conditions and Privacy Policy.</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="profile">Profile</string>
    <string name="post">Post</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_terms_and_conditions">
        <![CDATA[
            <link rel="preconnect" href="https://fonts.googleapis.com">
            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
            <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,700&display=swap" rel="stylesheet">
            <style>
                body {
                    line-height: 1.3;
                    font-family: "DM Sans", sans-serif;
                    color: #2F5329;
                }
                span{
                    font-weight: 700;
                }
            </style>

            <body>
                <p>Please read these Terms and Conditions ("Terms") carefully before using the HealthBuddy mobile application
                    ("App")
                    operated by [Your Company Name] ("us," "we," or "our").</p>

                <p>By accessing or using the App, you agree to be bound by these Terms. If you disagree with any part of the Terms,
                    do
                    not
                    use the App.</p>

                <p style="margin:0"><span>Use of the App:</span></p>

                <ol style="margin:0">
                    <li><span>User Account:</span> To use certain features of the App, you may be required to create an account. You are
                        responsible for
                        maintaining the confidentiality of your account information and password.
                    </li>
                    <li><span>User-generated Content:</span> HealthBuddy allows you to input and share health and fitness-related
                        information,
                        including
                        nutrition and exercise data. You are solely responsible for the accuracy and legality of the content you
                        upload
                        or
                        share.
                    </li>
                    <li><span>Prohibited Activities:</span> You agree not to engage in any activities that may compromise the security or
                        integrity of the
                        App, including hacking, reverse engineering, or distributing harmful code.
                    </li>
                </ol>

                <br>
                <p style="margin:0"><span>Intellectual Property:</span></p>

                <ol style="margin:0">
                    <li><span>App Content:</span> All content within the App, including text, graphics, logos, and images, is owned by us
                        or
                        our licensors
                        and is protected by copyright and other intellectual property laws.
                    </li>
                    <li><span>User Content:</span> You retain ownership of the content you upload or share within the App. By providing
                        user-generated
                        content, you grant us a non-exclusive, worldwide, royalty-free license to use, display, and distribute that
                        content
                        within the App.
                    </li>
                    <li><span>Prohibited Activities:</span> You agree not to engage in any activities that may compromise the security or
                        integrity of the
                        App, including hacking, reverse engineering, or distributing harmful code.
                    </li>
                </ol>

                <p>
                    <span>Privacy:</span><br>
                    Your use of the App is also governed by our Privacy Policy. By using the App, you consent to the practices
                    outlined
                    in
                    the Privacy Policy.
                </p>

                <p>
                    <span>Disclaimer:</span><br>
                    The App is provided "as is" and "as available" without warranties of any kind, whether express or implied. We do
                    not
                    warrant that the App will be error-free or that access to the App will be uninterrupted.
                </p>

                <p>
                    <span>Limitation of Liability:</span><br>
                    To the extent permitted by law, we shall not be liable for any indirect, consequential, special, or incidental
                    damages
                    arising out of or in connection with your use of the App.
                </p>

                <p>
                    <span>Governing Law:</span><br>
                    These Terms shall be governed by and construed in accordance with the laws of [Your Country], without regard to
                    its
                    conflict of law principles.
                </p>

                <p>
                    <span>Changes to Terms:</span><br>
                    We reserve the right to modify or replace these Terms at any time. By continuing to use the App after changes to
                    the
                    Terms have been posted, you agree to be bound by the updated Terms.
                </p>
            </body>
        ]]>
    </string>
</resources>