<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_green">

    <View
        android:id="@+id/line_header"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="@dimen/width_header"
        android:background="@color/lighter_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left_right_header"
        android:fontFamily="@font/dm_sans_medium"
        android:text="@string/app_name"
        android:textColor="@color/dark_green"
        android:textSize="@dimen/font_size_logo"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/line_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/trademark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/dm_sans_medium"
        android:text="@string/trademark"
        android:textColor="@color/dark_green"
        android:textSize="@dimen/font_size_trademark"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/line_header"
        app:layout_constraintStart_toEndOf="@+id/app_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icon_settings"
        android:layout_width="@dimen/width_height_icon"
        android:layout_height="@dimen/width_height_icon"
        android:layout_marginEnd="@dimen/margin_left_right_header"
        android:contentDescription="@string/settings"
        app:layout_constraintBottom_toTopOf="@+id/line_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_settings" />

</androidx.constraintlayout.widget.ConstraintLayout>