<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_green"
            tools:context=".landing.LoginFragment">

            <ImageView
                android:id="@+id/img"
                android:layout_width="355dp"
                android:layout_height="286dp"
                android:layout_marginTop="60dp"
                android:src="@drawable/img_land_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/dm_sans_medium"
                android:text="@string/community"
                android:textColor="@color/dark_green"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img" />

            <TextView
                android:id="@+id/msg"
                android:layout_width="365dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/dm_sans"
                android:gravity="center_horizontal"
                android:text="@string/text_land_3"
                android:textColor="@color/dark_green"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_1" />

            <Button
                android:id="@+id/button"
                android:layout_width="365dp"
                android:layout_height="55dp"
                android:layout_marginBottom="50dp"
                android:backgroundTint="@color/button_green"
                android:drawableLeft="@drawable/ic_google"
                android:fontFamily="@font/dm_sans_medium"
                android:gravity="center|center_horizontal"
                android:includeFontPadding="false"
                android:paddingLeft="40dp"
                android:text="@string/continue_with_google"
                android:textSize="18sp"
                android:textStyle="bold"
                app:iconPadding="-15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/disclaimer"
                android:layout_width="365dp"
                android:layout_height="24dp"
                android:fontFamily="@font/dm_sans"
                android:text="@string/disclaimer"
                android:textColor="@color/disclaimer_green"
                android:textSize="9sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>