<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_green"
        tools:context=".landing.SecondFragment">

        <ImageView
            android:id="@+id/img"
            android:layout_width="355dp"
            android:layout_height="286dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/img_land_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/dm_sans_medium"
            android:text="@string/nutrition"
            android:textColor="@color/dark_green"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img" />

        <TextView
            android:id="@+id/msg"
            android:layout_width="365dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/dm_sans"
            android:gravity="center_horizontal"
            android:text="@string/text_land_2"
            android:textColor="@color/dark_green"
            android:textSize="@dimen/font_size_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_1" />

        <Button
            android:id="@+id/button"
            android:layout_width="365dp"
            android:layout_height="55dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/button_green"
            android:fontFamily="@font/dm_sans_medium"
            android:text="@string/next"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>