<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addUserData.AddUserData">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_green"
        tools:context=".com.example.healthbuddy.account.AccountFragment">

        <include
            android:id="@+id/layoutTop"
            layout="@layout/layout_top_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            android:id="@+id/layoutBottom"
            layout="@layout/layout_bottom_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/post_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_tab_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:tabIndicatorColor="@color/leaf_green"
            app:tabIndicatorGravity="bottom"
            app:tabIndicatorHeight="4dp"
            app:tabRippleColor="@android:color/transparent"
            app:tabSelectedTextAppearance="@style/text_tab_selected"
            app:tabSelectedTextColor="@color/leaf_green"
            app:tabTextAppearance="@style/text_tab"
            app:tabTextColor="@color/leaf_green_55">

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nutrition" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercise" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:layout_width="match_parent"
            android:id="@+id/view_pager"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/layoutBottom"
            app:layout_constraintTop_toBottomOf="@+id/post_layout"
            tools:layout_editor_absoluteX="-16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</RelativeLayout>